<resources>
<string name="app_name">KotlinJsonUI Sample</string>
<string name="dynamic_dynamicmodestatus">Dynamic: @{dynamicModeStatus}</string>
<string name="corner_combinations">Corner Combinations</string>
<string name="top_left">Top-Left</string>
<string name="top_right">Top-Right</string>
<string name="bottom_left">Bottom-Left</string>
<string name="bottom_right">Bottom-Right</string>
<string name="edge_center_combinations">Edge + Center Combinations</string>
<string name="top_center">Top-Center</string>
<string name="bottom_center">Bottom-Center</string>
<string name="left_center">Left-Center</string>
<string name="right_center">Right-Center</string>
<string name="multiple_elements_test">Multiple Elements Test</string>
<string name="tl">TL</string>
<string name="tr">TR</string>
<string name="bl">BL</string>
<string name="br">BR</string>
<string name="center">Center</string>
<string name="hstack_mixed_alignment">HStack Mixed Alignment</string>
<string name="left_top">Left-Top</string>
<string name="right_bottom">Right-Bottom</string>
<string name="vstack_mixed_alignment">VStack Mixed Alignment</string>
<string name="edge_cases">Edge Cases</string>
<string name="only_horizontal_center">Only horizontal center</string>
<string name="only_vertical_center">Only vertical center</string>
<string name="parent_alignment_single_propert">Parent Alignment - Single Properties</string>
<string name="aligntop">alignTop</string>
<string name="alignbottom">alignBottom</string>
<string name="alignleft">alignLeft</string>
<string name="alignright">alignRight</string>
<string name="centerhorizontal">centerHorizontal</string>
<string name="centervertical">centerVertical</string>
<string name="centerinparent">centerInParent</string>
<string name="hstack_alignment_tests">HStack Alignment Tests</string>
<string name="top">Top</string>
<string name="str_default">Default</string>
<string name="bottom">Bottom</string>
<string name="vstack_alignment_tests">VStack Alignment Tests</string>
<string name="text_binding">Text Binding</string>
<string name="enter_text">Enter text</string>
<string name="you_typed_textvalue">You typed: @{textValue}</string>
<string name="counter_binding">Counter Binding</string>
<string name="decrease">Decrease</string>
<string name="increase">Increase</string>
<string name="toggle_binding">Toggle Binding</string>
<string name="toggle_is_togglevalue">Toggle is: @{toggleValue}</string>
<string name="onoff">ON/OFF</string>
<string name="slider_binding">Slider Binding</string>
<string name="slider_value_slidervalue">Slider value: @{sliderValue}</string>
<string name="selectbox_binding">SelectBox Binding</string>
<string name="str_">選択してください</string>
<string name="selected_selectedoption">Selected: @{selectedOption}</string>
<string name="date_picker_wheels_style">Date Picker (Wheels Style)</string>
<string name="str__2">日付を選択</string>
<string name="date_picker_compact_style">Date Picker (Compact Style)</string>
<string name="select_date">Select date</string>
<string name="button_enabled_state_isbuttonen">Button enabled state: @{isButtonEnabled}</string>
<string name="test_button_controlled_by_data">Test Button (controlled by data)</string>
<string name="toggle_enabled_state">Toggle Enabled State</string>
<string name="always_disabled_button">Always Disabled Button</string>
<string name="always_enabled_button">Always Enabled Button</string>
<string name="button_height_test">Button Height Test</string>
<string name="height_55_padding_12_20">Height 55, Padding [12, 20]</string>
<string name="test_button_1">Test Button 1</string>
<string name="height_55_no_padding">Height 55, No Padding</string>
<string name="test_button_2">Test Button 2</string>
<string name="no_height_padding_12_20">No Height, Padding [12, 20]</string>
<string name="test_button_3">Test Button 3</string>
<string name="with_bottommargin_8_height_55_p">With bottomMargin 8, Height 55, Padding [12, 20]</string>
<string name="like_primary_button_style">Like primary_button style</string>
<string name="collectionview_test">CollectionView Test</string>
<string name="basic_collection_with_headers_f">Basic Collection with Headers &amp;amp; Footers</string>
<string name="grid_collection_with_multiple_c">Grid Collection with Multiple Cell Types</string>
<string name="horizontal_collection">Horizontal Collection</string>
<string name="sectioned_collection">Sectioned Collection</string>
<string name="multi_section_collection">Multi-Section Collection</string>
<string name="new_components_test">New Components Test</string>
<string name="togglecheckbox_components">Toggle/Checkbox Components</string>
<string name="enable_notifications">Enable Notifications</string>
<string name="i_agree_to_terms">I agree to terms</string>
<string name="progress_slider">Progress &amp;amp; Slider</string>
<string name="download_progress">Download Progress</string>
<string name="volume">Volume</string>
<string name="selection_components">Selection Components</string>
<string name="view_mode">View Mode</string>
<string name="select_size">Select Size</string>
<string name="loading_indicator">Loading Indicator</string>
<string name="loading">Loading...</string>
<string name="circle_image">Circle Image</string>
<string name="gradient_view">Gradient View</string>
<string name="gradient_background">Gradient Background</string>
<string name="blur_view">Blur View</string>
<string name="blurred_background">Blurred Background</string>
<string name="gradientview_test">GradientView Test</string>
<string name="diagonal_gradient">Diagonal Gradient</string>
<string name="blurview_test">BlurView Test</string>
<string name="background_text">BACKGROUND TEXT</string>
<string name="this_will_be_blurred">This will be blurred</string>
<string name="clear_text_on_blur_layer">Clear Text on Blur Layer</string>
<string name="webview_test">WebView Test</string>
<string name="tabview_test">TabView Test</string>
<string name="collection_test">Collection Test</string>
<string name="image_test">Image Test</string>
<string name="networkimage_test">NetworkImage Test</string>
<string name="custom_component_test">Custom Component Test</string>
<string name="testing_samplecard_static_value">Testing SampleCard - Static Values</string>
<string name="card_content">Card Content</string>
<string name="this_content_is_inside_the_cust">This content is inside the custom component</string>
<string name="testing_samplecard_dynamic_valu">Testing SampleCard - Dynamic Values</string>
<string name="dynamic_count_itemcount">Dynamic count: @{itemCount}</string>
<string name="increment">Increment</string>
<string name="decrement">Decrement</string>
<string name="testing_multiple_cards">Testing Multiple Cards</string>
<string name="content_for_card_1">Content for card 1</string>
<string name="content_for_card_2">Content for card 2</string>
<string name="content_for_card_3">Content for card 3</string>
<string name="testing_statusbadge_non_contain">Testing StatusBadge - Non-Container Component</string>
<string name="toggle_dynamic_mode">Toggle Dynamic Mode</string>
<string name="dynamic_mode_dynamicmodestatus">Dynamic Mode: @{dynamicModeStatus}</string>
<string name="basic_datepicker">Basic DatePicker</string>
<string name="datepicker_with_minmax_dates">DatePicker with Min/Max Dates</string>
<string name="min_2025_01_01_max_2025_12_31">Min: 2025-01-01, Max: 2025-12-31</string>
<string name="time_picker">Time Picker</string>
<string name="datetime_picker">DateTime Picker</string>
<string name="datepicker_with_minute_interval">DatePicker with Minute Interval</string>
<string name="str_15_minute_intervals">15 minute intervals</string>
<string name="calendar_style_datepicker">Calendar Style DatePicker</string>
<string name="select_date_range">Select Date Range</string>
<string name="selected_values">Selected Values:</string>
<string name="date_selecteddate">Date: @{selectedDate}</string>
<string name="range_startdate_to_enddate">Range: @{startDate} to @{endDate}</string>
<string name="enabled_button">Enabled Button</string>
<string name="disabled_button">Disabled Button</string>
<string name="touchdisabledstate_button">TouchDisabledState Button</string>
<string name="touch_disabled">Touch Disabled</string>
<string name="enabled_textfield">Enabled TextField</string>
<string name="enabled_can_type_here">Enabled - can type here</string>
<string name="disabled_textfield">Disabled TextField</string>
<string name="disabled_cannot_type">Disabled - cannot type</string>
<string name="disabled_text_field">Disabled text field</string>
<string name="dynamic_enabledisable_test">Dynamic Enable/Disable Test</string>
<string name="toggle_enable_state">Toggle Enable State</string>
<string name="dynamic_button">Dynamic Button</string>
<string name="current_state_isenabled">Current state: @{isEnabled}</string>
<string name="drawable_generation_test">Drawable Generation Test</string>
<string name="button_with_ripple">Button with Ripple</string>
<string name="state_list_button">State List Button</string>
<string name="card_with_ripple">Card with Ripple</string>
<string name="click_for_ripple_effect">Click for ripple effect</string>
<string name="complex_drawable">Complex Drawable</string>
<string name="default_font">Default Font</string>
<string name="bold_style">Bold Style</string>
<string name="custom_font_file">Custom Font File</string>
<string name="font_key_test">Font Key Test</string>
<string name="button_with_font">Button with Font</string>
<string name="input_with_custom_font">Input with custom font</string>
<string name="personal_information">Personal Information</string>
<string name="first_name">First Name</string>
<string name="last_name">Last Name</string>
<string name="email_address">Email Address</string>
<string name="phone_number">Phone Number</string>
<string name="address_information">Address Information</string>
<string name="street_address">Street Address</string>
<string name="city">City</string>
<string name="zip_code">ZIP Code</string>
<string name="country">Country</string>
<string name="professional_information">Professional Information</string>
<string name="company">Company</string>
<string name="regular_textfield_not_secure">Regular TextField (not secure)</string>
<string name="enter_regular_text">Enter regular text</string>
<string name="secure_textfield_password">Secure TextField (password)</string>
<string name="enter_password">Enter password</string>
<string name="confirm_password_also_secure">Confirm Password (also secure)</string>
<string name="confirm_password">Confirm password</string>
<string name="values_entered">Values entered:</string>
<string name="regular_regulartext">Regular: @{regularText}</string>
<string name="password_hidden">Password: [hidden]</string>
<string name="confirm_hidden">Confirm: [hidden]</string>
<string name="font_sizes">Font Sizes</string>
<string name="fontsize_12">fontSize: 12</string>
<string name="fontsize_16">fontSize: 16</string>
<string name="fontsize_20">fontSize: 20</string>
<string name="fontsize_24">fontSize: 24</string>
<string name="font_styles">Font Styles</string>
<string name="bold_text">Bold Text</string>
<string name="underlined_text">Underlined Text</string>
<string name="text_alignment">Text Alignment</string>
<string name="left_aligned_default">Left Aligned (default)</string>
<string name="center_aligned">Center Aligned</string>
<string name="right_aligned">Right Aligned</string>
<string name="line_spacing_test">Line Spacing Test</string>
<string name="this_is_a_multi_line_text_with_">This is a multi-line text with lineSpacing: 5 to demonstrate line spacing</string>
<string name="this_is_another_multi_line_text">This is another multi-line text with lineSpacing: 10 to demonstrate line spacing (line breaks work with proper spacing)</string>
<string name="font_colors">Font Colors</string>
<string name="red_text">Red Text</string>
<string name="green_text">Green Text</string>
<string name="blue_text">Blue Text</string>
</resources>