<?xml version="1.0" encoding="UTF-8"?>
<!-- Generated from secure_field_test.json with Data Binding -->
<!-- DO NOT EDIT MANUALLY - Use 'kjui generate' to update -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="data"
            type="com.example.kotlinjsonui.sample.data.SecureFieldTestData"/>
        <variable
            name="viewModel"
            type="com.example.kotlinjsonui.sample.viewmodels.SecureFieldTestViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">
        <com.kotlinjsonui.views.KjuiButton
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:textColor="#FFFFFF"
            android:text="@string/dynamic_dynamicmodestatus"
            android:onClick="toggleDynamicMode"
            android:background="@drawable/ripple_b39393a0"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="8dp"/>
        <com.kotlinjsonui.views.KjuiTextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{data.title}"
            android:textSize="24sp"
            android:textColor="#000000"/>
        <com.kotlinjsonui.views.KjuiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular_textfield_not_secure"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="30dp"/>
        <com.kotlinjsonui.views.KjuiEditText
            android:id="@+id/regular_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_regular_text"
            android:text="@{data.regularText}"
            android:background="@drawable/shape_378d2514"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <com.kotlinjsonui.views.KjuiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secure_textfield_password"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="20dp"/>
        <com.kotlinjsonui.views.KjuiEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_password"
            android:text="@{data.password}"
            android:background="@drawable/shape_378d2514"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <com.kotlinjsonui.views.KjuiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_also_secure"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="20dp"/>
        <com.kotlinjsonui.views.KjuiEditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password"
            android:text="@{data.confirmPassword}"
            android:background="@drawable/shape_378d2514"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:background="@drawable/shape_aba07408">
            <com.kotlinjsonui.views.KjuiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/values_entered"
                android:textSize="14sp"
                android:textColor="#333333"
                android:textStyle="bold"/>
            <com.kotlinjsonui.views.KjuiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular_regulartext"
                android:textSize="12sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"/>
            <com.kotlinjsonui.views.KjuiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_hidden"
                android:textSize="12sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"/>
            <com.kotlinjsonui.views.KjuiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_hidden"
                android:textSize="12sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>